ultimas correcciones, todo menos las listas

--- a/cliente/src/app/components/inicio/inicio.component.html
+++ b/cliente/src/app/components/inicio/inicio.component.html
@@ -1,7 +1,7 @@
 <br><br>
 <div style="margin: auto; width: 95%;">
     <div class="input-group mb-3">
-        <input type="file" class="form-control-sm" id="fileee" name="fileee" aria-describedby="fileee2" accept=".cst"
+        <input type="file" class="form-control-sm" id="fileee" name="fileee" aria-describedby="fileee2" accept=".tw"
             (change)="CargaArchivo($event)">
 
     </div>
