--- a/cliente/src/app/components/menu/menu.component.html
+++ b/cliente/src/app/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">COMPSCRIPT - 202006629</a>
+        <a class="navbar-brand" href="#">EXREGAN - 202006629</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
